Update Movie Genre Classification.ipynb

--- a/Movie Genre Classification.ipynb
+++ b/Movie Genre Classification.ipynb
@@ -13,7 +13,7 @@
    "id": "91443719-38a5-4dda-9694-a7c108ed6cad",
    "metadata": {},
    "source": [
-    "#### AUTHOR(s): Raghul V, Shreyans Jain\n",
+    "#### AUTHOR(s): Raghul V\n",
     "----------------"
    ]
   },
